Fix some performance issues on mobile devices

--- a/interface/assets/styles/complex/alerts.css
+++ b/interface/assets/styles/complex/alerts.css
@@ -88,7 +88,7 @@
     text-align: center;
     opacity: 0;
     animation: showOverlayCard 0.06s forwards;
-    animation-delay: 0.1s;
+    animation-delay: 0.06s;
 }
 
 @keyframes showOverlayCard {
