--- a/interface/assets/styles/complex/search.css
+++ b/interface/assets/styles/complex/search.css
@@ -132,7 +132,7 @@
 .layout--searchcontainer {
     opacity: 0;
     animation: searchContainerAnimation .16s forwards;
-    animation-delay: 0.1s;
+    animation-delay: 0.06s;
 }
 
 @keyframes backButtonAnimation {
